[package]
name = "trivial-verifier"
version = "0.6.0"
authors = ["Ivo C.S. Wingelaar <ivo@codeforge.rs>"]
description = "The Trivial proof verifier - an interface to the Metamath Zero kernel"
keywords = ["metamath-zero", "trivial"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
trivial-kernel = "0.5.0"
trivial-compiler = "0.2.0"
mmb-parser = "0.3.0"
